tests/NormalTests/paczka1/small_fuzzy/75401486.err
Error in line 2: eEX9r89GaAg S646 40,0
Error in line 9: Jhoe5 A178 65,8
